codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: tui2/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

































•     -- Indented code block (4 spaces)
      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ┌─ markdown ─
  ```sh
  printf 'fenced within fenced\n'
  ```

  ┌─ jsonc ─
  {
    // comment allowed in jsonc
    "path": "C:\\Program Files\\App",
    "regex": "^foo.*(bar)?$"
  }
