codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__exploring_step1_start_ls.snap
---
source: tui2/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
•Exploring
  ╰ List ls -la
