codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui2/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
● Explored
  ╰ List ls -la
