codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__exploring_step3_start_cat_foo.snap
---
source: tui2/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Exploring
  ╰ List ls -la
    Read foo.txt
