codex-rs/tui2/src/chatwidget/snapshots/codex_tui2__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui2/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • codex-logs.log

▸ › 1. Yes  Share the current Codex session logs with the team for
          troubleshooting.
    2. No

  Press enter to confirm or esc to go back
